<resources>
    <string name="app_name">catego</string>
    <string name="title_user_name">User Name</string>
    <string name="title_password">Password</string>
    <string name="title_checkbox_save_infor">Save login infor</string>
    <string name="title_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">CANCEL</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Healthcare</string>
    <string name="title_employee_healthcare_height">Height</string>
    <string name="title_employee_healthcare_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close\n</string>
    <string name="title_closee">Close</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
</resources>
